--- a/src/assets/css/NewArrivals.css
+++ b/src/assets/css/NewArrivals.css
@@ -1,6 +1,11 @@
 .new-arrivals {
   background-color: #e8e8ea;
-  /* margin: 60px 0; */
   max-width: 1440px;
-  height: 600px;
+  height: 560px;
+}
+
+@media (max-width: 576px) {
+  .new-arrivals {
+    height: 460px;
+  }
 }
